--- a/index.html
+++ b/index.html
@@ -15,7 +15,85 @@
 <body>
 <!-- BEGIN  out-->
 <div class="out">
-
+	<!-- header -->
+	<header class="header">
+		<div class="header__in">
+			<div class="logo">
+				<a href="#">
+					<img src="img/logo.png" alt="">
+				</a>
+			</div>
+			<div class="timetable">
+				<p>Время работы</p>
+				<ul>
+					<li>пн-пт 8:00–20:00</li>
+					<li>сб-вс 8:00–18:00</li>
+				</ul>
+			</div>
+			<div class="adress">
+				<p>г. Москва, ул. Нижне-Покровская, д. 21</p>
+				<ul>
+					<li>+375 29 643-07-33</li>
+					<li>+375 33 543-07-33</li>
+				</ul>
+			</div>
+		</div>
+		<nav class="menu" role="navigation">
+			<ul>
+				<li><a href="#"><span>Главная</span></a></li>
+				<li><a href="#"><span>О Клинике</span></a></li>
+				<li><a href="#"><span>Запись на прием</span></a></li>
+				<li><a href="#"><span>Лечение и цены</span></a></li>
+				<li><a href="#"><span>врачи</span></a></li>
+				<li><a href="#"><span>Иногородним</span></a></li>
+				<li><a href="#"><span>Контакты</span></a></li>
+			</ul>
+		</nav>
+	</header>
+	<!-- topper -->
+	<div class="topper clr">
+		<div class="topper__left">
+			<div class="slider js-slider">
+				<div class="slider__item">
+					<img src="img/img1.jpg" alt="">
+					<div class="slider__content">
+						<div class="h1">Космедент - это современная стоматологическая клиника для всей семьи</div><p>сеть элитных стоматологических клиник, удобно расположенных в центре Москвы</p>	
+						<a href="#" class="btn">Узнать больше</a>
+					</div>
+				</div>
+				<div class="slider__item">
+					<img src="img/img1.jpg" alt="">
+					<div class="slider__content">
+						<div class="h1">Космедент - это современная стоматологическая клиника для всей семьи</div><p>сеть элитных стоматологических клиник, удобно расположенных в центре Москвы</p>	
+						<a href="#" class="btn">Узнать больше</a>
+					</div>
+				</div>
+				<div class="slider__item">
+					<img src="img/img1.jpg" alt="">
+					<div class="slider__content">
+						<div class="h1">Космедент - это современная стоматологическая клиника для всей семьи</div><p>сеть элитных стоматологических клиник, удобно расположенных в центре Москвы</p>	
+						<a href="#" class="btn">Узнать больше</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="topper__right">
+			<nav class="nav">
+				<ul>
+					<li><a href="#">Лечение кариеса</a></li>
+					<li><a href="#">Исправление прикуса</a></li>
+					<li><a href="#">Детский стоматолог</a></li>
+					<li><a href="#">Протезирование</a></li>
+					<li><a href="#">Ортодонтия</a></li>
+					<li><a href="#">Парадонтология</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+	<!-- main page content -->
+	<div class="main-wrap">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum placeat quis a sapiente autem esse, accusantium velit deserunt, provident veniam? Suscipit hic esse quidem velit facere odit, dolorem, consectetur sit?
+	</div>
 </div>
 <!-- END out-->
 <!-- load scripts -->
