--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<!-- theme color for android 5.0 -->
 	<meta name="theme-color" content="#fff">
-<link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon"> 
+<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon"> 
 	<!-- <meta name="viewport" content="width=1200"> -->
 	<!-- <meta name="viewport" content="initial-scale=1, user-scalable=no"> -->
 	<link rel="stylesheet" media="all" href="css/jquery.fancybox.css" >
