--- a/index.html
+++ b/index.html
@@ -226,27 +226,27 @@
 				</div>
 			</div>
 			<div class="media__col">
-				<div class="m-comm">
+				<div class="comm">
 					<h2 class="h2">Клиенты о нас</h2>
 					<div class="slider js-slider">
 						<div class="slider__item">
-							<div class="m-comm__item">
-								<div class="m-comm__text">Замечательные специалисты! Доброжелательное отношение врачей, качественная работа, ответственность и беспокойство за своего клиента показывают высокий профессионализм врачей медицинского центра. Спасибо за вашу чуткость и внимание!</div>
-								<div class="m-comm__author">Ольга Степанова</div>
+							<div class="comm__item">
+								<div class="comm__text">Замечательные специалисты! Доброжелательное отношение врачей, качественная работа, ответственность и беспокойство за своего клиента показывают высокий профессионализм врачей медицинского центра. Спасибо за вашу чуткость и внимание!</div>
+								<div class="comm__author">Ольга Степанова</div>
 								<div class="date">08 июня 2015</div>
 							</div>
 						</div>
 						<div class="slider__item">
-							<div class="m-comm__item">
-								<div class="m-comm__text">Замечательные специалисты! Доброжелательное отношение врачей, качественная работа, ответственность и беспокойство за своего клиента показывают высокий профессионализм врачей медицинского центра. Спасибо за вашу чуткость и внимание!</div>
-								<div class="m-comm__author">Ольга Степанова</div>
+							<div class="comm__item">
+								<div class="comm__text">Замечательные специалисты! Доброжелательное отношение врачей, качественная работа, ответственность и беспокойство за своего клиента показывают высокий профессионализм врачей медицинского центра. Спасибо за вашу чуткость и внимание!</div>
+								<div class="comm__author">Ольга Степанова</div>
 								<div class="date">08 июня 2015</div>
 							</div>
 						</div>
 						<div class="slider__item">
-							<div class="m-comm__item">
-								<div class="m-comm__text">Замечательные специалисты! Доброжелательное отношение врачей, качественная работа, ответственность и беспокойство за своего клиента показывают высокий профессионализм врачей медицинского центра. Спасибо за вашу чуткость и внимание!</div>
-								<div class="m-comm__author">Ольга Степанова</div>
+							<div class="comm__item">
+								<div class="comm__text">Замечательные специалисты! Доброжелательное отношение врачей, качественная работа, ответственность и беспокойство за своего клиента показывают высокий профессионализм врачей медицинского центра. Спасибо за вашу чуткость и внимание!</div>
+								<div class="comm__author">Ольга Степанова</div>
 								<div class="date">08 июня 2015</div>
 							</div>
 						</div>
