--- a/advantages.html
+++ b/advantages.html
@@ -72,7 +72,7 @@
 		<aside class="sidebar">
 			<nav class="nav">
 				<ul>
-					<li><a href="#">Лечение кариеса</a></li>
+					<li><a href="#" class="is-active">Лечение кариеса</a></li>
 					<li><a href="#">Исправление прикуса</a></li>
 					<li><a href="#">Детский стоматолог</a></li>
 					<li><a href="#">Протезирование</a></li>
