--- a/comments.html
+++ b/comments.html
@@ -91,7 +91,10 @@
 				</ul>
 			</nav>
 			<!-- comments -->
-			<h1 class="h1">Отзывы</h1>
+			<div class="comm-topper">
+				<h1 class="h1">Отзывы</h1>
+				<button type="button" class="btn btn_green js-popup" data-link="add-comment">Добавить отзыв</button>
+				</div>
 			<div class="comm">
 				<div class="comm__item">
 					<div class="comm__text">Замечательные специалисты! Доброжелательное отношение врачей, качественная работа, ответственность и беспокойство за своего клиента показывают высокий профессионализм врачей медицинского центра. Спасибо за вашу чуткость и внимание!</div>
@@ -134,6 +137,59 @@
 		</div> 
 	</div>
 </footer>
+<!-- popup -->
+<div class="popup" id="add-comment" style="display: none;">
+	<div class="popup__in">
+		<button type="button" class="popup__close js-popup-close"></button>
+		<div class="popup__content">
+			<h1 class="h1">Добавить отзыв</h1>
+			<div class="form">
+				<form action="#" class="js-validate">
+					<div class="form__row require">
+						<label class="input">
+							<input type="text" placeholder="Фамилия и имя" name="name" data-validation="required">
+							<span class="error__alert">Поле не заполнено</span>
+						</label>
+					</div>
+					<div class="form__row require">
+						<label class="input">
+							<input type="text" placeholder="Телефон" name="phone" data-validation="custom" data-validation-regexp="^[-0-9()+ ]+$">
+							<span class="error__alert">Поле не заполнено</span>
+						</label>
+					</div>
+					<div class="form__row require">
+						<label class="textarea">
+							<textarea type="text" placeholder="Сообщение" name="message" data-validation="required"></textarea>
+							<span class="error__alert">Поле не заполнено</span>
+						</label>
+					</div>
+					<div class="form__row">
+						<p>Отправить сообщение</p>
+						<div class="radio-wrap">
+							<label class="radio">
+								<input type="radio" name="message-type" checked>
+								<div>
+									<span>Как отзыв</span>
+									<p>Сообщение будет размещено в разделе «Отзывы»</p>
+								</div>
+							</label>
+							<label class="radio">
+								<input type="radio" name="message-type">
+								<div>
+									<span>Как жалобу</span>
+									<p>Сообщение  будет отправлено в администрацию клиники</p>
+								</div>
+							</label>
+						</div>
+					</div>
+					<div class="form__submit">
+						<button type="sudmit" class="btn btn_green">отправить</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+</div>	
 <!-- load scripts -->
 <script src="js/lib/head.js" data-headjs-load="js/init.js"></script>
 </body>
