--- a/license.html
+++ b/license.html
@@ -42,7 +42,7 @@
 		<nav class="menu" role="navigation">
 			<ul>
 				<li><a href="#"><span>Главная</span></a></li>
-				<li><a href="#"><span>О Клинике</span></a></li>
+				<li><a href="#" class="is-active"><span>О Клинике</span></a></li>
 				<li><a href="#"><span>Запись на прием</span></a></li>
 				<li><a href="#"><span>Лечение и цены</span></a></li>
 				<li><a href="#"><span>врачи</span></a></li>
