--- a/action.html
+++ b/action.html
@@ -97,7 +97,7 @@
 					<li class="news__item grid__item">
 						<a href="#">
 							<div class="news__img">
-								<img src="img/img5.jpg" alt="">
+								<img src="http://lorempixel.com/258/132/animals" alt="">
 							</div>
 							<p>Витамины в продуктах: как восполнить суточную потребность</p>
 							<div class="date"><span class="icon-timing"></span> 25 апреля 2015</div>
@@ -106,7 +106,7 @@
 					<li class="news__item grid__item">
 						<a href="#">
 							<div class="news__img">
-								<img src="img/img3.jpg" alt="">
+								<img src="http://lorempixel.com/258/132/sports" alt="">
 							</div>
 							<p>Завтрак для похудения рекомендация зубного врача</p>
 							<div class="date"><span class="icon-timing"></span> бессрочно</div>
