--- a/contacts.html
+++ b/contacts.html
@@ -142,7 +142,7 @@
 						<li class="route__row">
 							<div class="route__col small">Схема<br> проезда</div>
 							<div class="route__col wide">
-								<p>Координаты: <span>55°29'6"N</span> <span>28°45'53"E</span></p>
+								<p><span>Координаты:</span> <span>55°29'6"N</span> <span>28°45'53"E</span></p>
 							</div>
 						</li>
 					</ul>
