--- a/zapis.html
+++ b/zapis.html
@@ -124,7 +124,7 @@
 							<span class="error__alert">Поле не заполнено</span>
 						</label>
 					</div>
-					<div class="form__row">
+					<div class="form__submit">
 						<button type="sudmit" class="btn btn_green">Записаться</button>
 					</div>
 				</form>
